--- a/products/templates/products/album_detail.html
+++ b/products/templates/products/album_detail.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'products/css/products.css' %}">
+{% endblock %}
+
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -128,6 +132,6 @@
 {% block postloadjs %}
 {{ block.super }}
 
-{% include 'products/includes/quantity_input_script.html' %}
+{% include 'includes/quantity_input_script.html' %}
 
 {% endblock %}
