--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -15,6 +15,7 @@
 {% endblock %}
 
 {% block content %}
+    <!-- Overlay and Title -->
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -24,7 +25,7 @@
                 <hr>
             </div>
         </div>
-
+        <!-- Order Summary -->
         <div class="row dark-background-light-text-area">
             <div class="col-12 col-lg-6 order-lg-last mb-5">
                 <p>Order Summary ({{ product_count }})</p>
@@ -36,6 +37,7 @@
                         <p class="mb-1 mt-0 small ">Subtotal</p>
                     </div>
                 </div>
+                <!-- Item List -->
                 {% for item in cart_items %}
                     <div class="row">
                         <div class="col-2 mb-1">
@@ -60,6 +62,7 @@
                         </div>
                     </div>
                 {% endfor %}
+                <!-- Delivery and Total -->
                 <hr class="my-0">
                 <div class="row text-black text-right">
                     <div class="col-7 offset-2">
@@ -74,6 +77,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Delivery Form -->
             <div class="col-12 col-lg-6">
                 <p>Please fill out the form below to complete your order</p>
                 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
@@ -138,6 +142,7 @@
             </div>
         </div>
     </div>
+    <!-- Loading Overlay -->
     <div id="loading-overlay">
         <h1 class="text-light logo-font loading-spinner">
             <span class="icon">
