--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block content %}
+    <!-- Overlay and Title -->
     <div class="overlay"></div>
     <div class="container dark-background-light-text-area">
         <div class="row">
@@ -24,7 +25,7 @@
                 <p class="text-black">Your order information is below. A confirmation email will be sent to <span class="font-weight-bold">{{ order.email }}</span>.</p>
             </div>
         </div>
-
+        <!-- Order Info -->
         <div class="row">
             <div class="col-12 col-lg-7">
                 <div class="order-confirmation-wrapper p-2 border">
@@ -33,7 +34,6 @@
                             <small class="text-muted">Order Info:</small>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Order Number</p>
@@ -42,7 +42,6 @@
                             <p class="mb-0">{{ order.order_number }}</p>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Order Date</p>
@@ -51,34 +50,32 @@
                             <p class="mb-0">{{ order.order_date }}</p>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col">
                             <small class="text-muted">Order Details:</small>
                         </div>
                     </div>
-
+                    <!-- Order Line Items -->
                     {% for item in order.lineitems.all %}
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="small mb-0 text-black font-weight-bold">
-                                {{ item.product.name }}
-                            </p>
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <p class="small mb-0 text-black font-weight-bold">
+                                    {{ item.product.name }}
+                                </p>
+                            </div>
+                            <div class="col-12 col-md-8 text-md-right">
+                                <p class="small mb-0">
+                                    {{ item.quantity }} @ €{% if item.product.special_offer_price %}{{ item.product.special_offer_price }} {% else %}{{ item.product.price }}{% endif %} each
+                                </p>
+                            </div>
                         </div>
-                        <div class="col-12 col-md-8 text-md-right">
-                            <p class="small mb-0">
-                                {{ item.quantity }} @ €{% if item.product.special_offer_price %}{{ item.product.special_offer_price }} {% else %}{{ item.product.price }}{% endif %} each
-                            </p>
-                        </div>
-                    </div>
                     {% endfor %}
-
+                    <!-- Delivery Info -->
                     <div class="row">
                         <div class="col">
                             <small class="text-muted">Delivering To:</small>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Phone Number</p>
@@ -87,7 +84,6 @@
                             <p class="mb-0">{{ order.phone_number }}</p>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">First Name</p>
@@ -96,7 +92,6 @@
                             <p class="mb-0">{{ order.first_name }}</p>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Last Name</p>
@@ -105,7 +100,6 @@
                             <p class="mb-0">{{ order.last_name }}</p>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Address Line 1</p>
@@ -114,7 +108,6 @@
                             <p class="mb-0">{{ order.address_line1 }}</p>
                         </div>
                     </div>
-
                     {% if order.address_line2 %}
                     <div class="row">
                         <div class="col-12 col-md-4">
@@ -125,7 +118,6 @@
                         </div>
                     </div>
                     {% endif %}
-
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">City</p>
@@ -134,7 +126,6 @@
                             <p class="mb-0">{{ order.city }}</p>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">County</p>
@@ -143,7 +134,6 @@
                             <p class="mb-0">{{ order.county }}</p>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Eircode</p>
@@ -152,13 +142,11 @@
                             <p class="mb-0">{{ order.eircode }}</p>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col">
                             <small class="text-muted">Billing Info:</small>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Product Total</p>
@@ -167,7 +155,6 @@
                             <p class="mb-0">{{ order.product_total }}</p>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Delivery</p>
@@ -176,7 +163,6 @@
                             <p class="mb-0">{{ order.delivery_cost }}</p>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Grand Total</p>
@@ -190,6 +176,7 @@
         </div>
         <div class="row">
 			<div class="col-12 col-lg-7 text-right">
+                <!-- Back to Profile -->
                 {% if from_profile %}
                     <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
                         <span class="icon mr-2">
@@ -197,6 +184,7 @@
                         </span>
                         <span class="text-uppercase">Back to Profile</span>
                     </a>
+                <!-- Latest Deals -->
                 {% else %}
                     <a href="{% url 'albums' %}?category=deals" class="btn btn-black my-2">
                         <span class="icon mr-2">
